tests/baselines/reference/generatorTypeCheck58(strict=true).errors.txt
generatorTypeCheck58.ts(3,20): error TS1163: A 'yield' expression is only allowed in a generator body.
generatorTypeCheck58.ts(3,20): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== generatorTypeCheck58.ts (2 errors) ====
    function* g() {
        class C {
            static x = yield 0;
                       ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                       ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        };
    }